--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
   flex: 1;
   background: #ffffff;
-  background-image: url("https://cdna.artstation.com/p/assets/images/images/004/560/916/large/dominik-mayer-redmoon.jpg?1484594633");
+  background-image:linear-gradient(
+    180deg,
+    rgba(155, 67, 67, 0.4),
+    rgba(48, 44, 44, 0.144)
+  ), url("https://cdna.artstation.com/p/assets/images/images/004/560/916/large/dominik-mayer-redmoon.jpg?1484594633");
   opacity: 0.8;
 }
 
