--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 body {
   flex: 1;
   background: #ffffff;
-  background-image:linear-gradient(
+  background-image:
+  linear-gradient(
     180deg,
-    rgba(155, 67, 67, 0.4),
-    rgba(48, 44, 44, 0.144)
-  ), url("https://cdna.artstation.com/p/assets/images/images/004/560/916/large/dominik-mayer-redmoon.jpg?1484594633");
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.144)
+  ), 
+  url("https://i.pinimg.com/originals/8a/e1/04/8ae104a88d8fd8e5c4d1a9cbea4d4c96.gif");
   opacity: 0.8;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 
