--- a/src/routes/App.css
+++ b/src/routes/App.css
@@ -36,6 +36,16 @@
     cursor: pointer;
 }
 
+.markPost{
+    text-align: center;
+    color: rgb(121, 121, 121);
+}
+
+.markPost:hover {
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+}
+
 .form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: rgb(99, 98, 98);
     opacity: 1; /* Firefox */
